# badminton_scoreboard_rs

./: Cargo.toml
src/: main.rs
src/archive/: cli_mainloop_archive.rs
src/assets/imgs/: bcourt.xcf
src/engine/: state.rs
src/engine/doubles/: servestates.rs
src/engine/singles/: mod.rs  servestates.rs
src/render/: mod.rs  render_cli.rs  render_egui.rs
